# ClassicDereth

./: .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  ChatCommands.cpp  Classic Dereth.sln  Classic Dereth.vcxproj  Classic Dereth.vcxproj.filters  Client.cpp  Dockerfile  Dockerfile.RELEASE  LICENSE  LoggerReadMe.md  PkCommands.cpp  PrecompileHeader.cmake  README.md  TownCrier.cpp
Data/weenie/defaults/custom/: Aerlinthe Quest Jumping Shirt (100006).wqd  An Unfortunate Gem (100007).wqd  Contributor Aura Item (100004).wqd  Contributor Shield (100003).wqd  Crown of Jubileeh (100005).wqd  Custom Robe 101089.wqd  Default Player Weenie (400000).wqd  Default Player Weenie 2 (400001).wqd  Giant Hollow Katar (100001).wqd  Nexus Amuli Coat (206799).wqd  Nexus Amuli Leggings (206801).wqd  Nexus Celdon Breastplate (206797).wqd  Nexus Celdon Girth (206800).wqd  Nexus Core Gem (206807).wqd  (+17 more)
Lib/: taskex.hpp  xsocket.hpp
Lib/mysql/: libmysql.lib  my_config.h
Lib/zlib/: zlibstat.lib  zlibstatDebug.lib
Resource/: PhatAC.rc  resource.h
Source/: AllegianceManager.cpp  AllegianceManager.h  Ammunition.cpp  Ammunition.h  Animate.cpp  Animate.h  AnimationPackage.h  AttackManager.cpp  AttackManager.h  AttributeTransferDevice.cpp  AttributeTransferDevice.h  AugmentationDevice.cpp  AugmentationDevice.h  BindStone.cpp  BindStone.h  Book.cpp  Book.h  Caster.cpp  Caster.h  ChatMsgs.cpp  ChatMsgs.h  ChessDefines.h  ChessManager.cpp  ChessManager.h  ChessMatch.cpp  ChessMatch.h  Chest.cpp  Chest.h  Client.cpp  Client.h  ClientCommands.cpp  ClientCommands.h  ClientEvents.cpp  ClientEvents.h  Clothing.cpp  Clothing.h  Common.h  Config.cpp  Config.h  Container.cpp  (+161 more)
Source/Messages/: IClientMessage.h
Source/Messages/Client to Server/: AllegianceApprovedVassalSet_0040.cpp  AllegianceApprovedVassalSet_0040.h  AllegianceBanAdd_02A1.cpp  AllegianceBanAdd_02A1.h  AllegianceBanList_02A3.cpp  AllegianceBanList_02A3.h  AllegianceBanRemove_02A2.cpp  AllegianceBanRemove_02A2.h  AllegianceBoot_0277.cpp  AllegianceBoot_0277.h  AllegianceBreak_001E.cpp  AllegianceBreak_001E.h  AllegianceChatBoot_02A0.cpp  AllegianceChatBoot_02A0.h  AllegianceChatGag_0041.cpp  AllegianceChatGag_0041.h  AllegianceHouseAction_0042.cpp  AllegianceHouseAction_0042.h  AllegianceInfoRequest_027B.cpp  AllegianceInfoRequest_027B.h  AllegianceLockAction_003F.cpp  AllegianceLockAction_003F.h  AllegianceMOTDClear_0256.cpp  AllegianceMOTDClear_0256.h  AllegianceMOTDQuery_0255.cpp  AllegianceMOTDQuery_0255.h  AllegianceMOTDSet_0254.cpp  AllegianceMOTDSet_0254.h  AllegianceNameClear_0031.cpp  AllegianceNameClear_0031.h  AllegianceNameQuery_0030.cpp  AllegianceNameQuery_0030.h  AllegianceNameSet_0033.cpp  AllegianceNameSet_0033.h  AllegianceOfficerRemove_02A5.cpp  AllegianceOfficerRemove_02A5.h  AllegianceOfficerSet_003B.cpp  AllegianceOfficerSet_003B.h  AllegianceOfficerTitleSet_003C.cpp  AllegianceOfficerTitleSet_003C.h  (+14 more)
Source/PhatSDK/: ACCharGenData.cpp  ACCharGenData.h  ACCharGenResult.cpp  ACCharGenResult.h  AllegianceProfile.cpp  AllegianceProfile.h  AnimHooks.cpp  AnimHooks.h  Animation.cpp  Animation.h  Appraisal.cpp  Appraisal.h  BSPData.cpp  BSPData.h  BuildingObj.cpp  BuildingObj.h  ChildList.cpp  ChildList.h  ClothingTable.cpp  ClothingTable.h  CombatSystem.cpp  CombatSystem.h  DArray.h  DLListBase.h  EnvCell.cpp  EnvCell.h  Environment.cpp  Environment.h  ExperienceTable.cpp  ExperienceTable.h  Frame.cpp  Frame.h  GameEnums.h  GameSky.cpp  GameSky.h  GameStatEnums.h  GameTime.cpp  GameTime.h  GfxObj.cpp  GfxObj.h  (+125 more)
Source/PhatSDK/Support/: BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  ClothingCache.cpp  ClothingCache.h  CombatFormulas.cpp  CombatFormulas.h  CraftTable.cpp  CraftTable.h  DATDisk.cpp  DATDisk.h  GameEventDefDB.cpp  GameEventDefDB.h  ISAAC.h  Json.h  LandBlockExtendedData.cpp  LandBlockExtendedData.h  Packable.h  PackableJson.h  PhatDataBin.cpp  PhatDataBin.h  Random.cpp  Random.h  RandomRange.cpp  RandomRange.h  RegionDescExtendedData.cpp  RegionDescExtendedData.h  SkillChecks.cpp  SkillChecks.h  SpellTableExtendedData.cpp  SpellTableExtendedData.h  TreasureTable.cpp  TreasureTable.h  WeenieDefaults.cpp  WeenieDefaults.h  WeenieSave.cpp  WeenieSave.h
Source/combat/: AttackEventData.cpp  AttackEventData.h  DualWieldAttackEventData.cpp  DualWieldAttackEventData.h  MeleeAttackEventData.cpp  MeleeAttackEventData.h  MissileAttackEventData.cpp  MissileAttackEventData.h
Source/command/: ClientBugs.cpp
Source/command/admin/: Alleg.cpp  ConfigCommands.cpp  HouseCmd.cpp  LandBlocks.cpp  SetStats.cpp  TestCmd.cpp
Source/weenie/: PetDevice.cpp  PetDevice.h
